argocd-management/base/argocd-ingress.yaml
# Ingress to expose ArgoCD via argocd-nonprod.yaal.be
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-nonprod
  namespace: argo
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true" # Enforce HTTPS redirection
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # Ensure backend connection uses HTTPS
    external-dns.alpha.kubernetes.io/access: "public"
    external-dns.alpha.kubernetes.io/hostname: "argocd-nonprod.yaal.be"
spec:
  tls:
    - hosts:
        - argocd-nonprod.yaal.be
      secretName: argocd-nonprod-tls
  rules:
    - host: argocd-nonprod.yaal.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
